fix css problem with overflow-y

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ main {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  height: 100%;
 }
 
 .header {
